# jni_a_so

app/: build.gradle
app/src/androidTest/java/com/ljy/mutjnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/hello/: CMakeLists.txt  hello.cpp
app/src/main/cpp/openCV/: CMakeLists.txt  opencv.cpp
app/src/main/java/com/ljy/mutjnidemo/: MainActivity.java  OpencvDemoActvity.java
app/src/main/java/com/ljy/mutjnidemo/jni/: Hello.java  OpenCV.java
app/src/main/res/layout/: activity_main.xml  activity_opencv_demo_actvity.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ljy/mutjnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
